# HRMS

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  nginx-hrms-current.txt  package-lock.json  package.json  readme.md  tsconfig.json  turbo.json
.github/workflows/: ci-cd.yml
apps/ai-engine/: pyproject.toml  requirements.txt
apps/ai-engine/app/: main.py
apps/ai-engine/app/agents/: __init__.py  hr_agent.py
apps/ai-engine/app/api/: router.py
apps/ai-engine/app/api/endpoints/: analytics.py  chat.py  documents.py  predictions.py  resume.py
apps/ai-engine/app/core/: config.py  database.py  exceptions.py
apps/ai-engine/app/ml/: __init__.py  model_trainer.py
apps/ai-engine/app/models/: schemas.py
apps/ai-engine/app/rag/: __init__.py  document_indexer.py  vector_store.py
apps/ai-engine/app/services/: chat_service.py  document_service.py  prediction_service.py  resume_service.py
apps/analytics-service/: Dockerfile  package.json
apps/api-gateway/: Dockerfile  package.json
apps/attendance-service/: Dockerfile  package.json  tsconfig.json
backend/: .env.example  Dockerfile  README.md  check_auth.py  docker-compose.yml  pytest.ini  requirements.txt  seed.py
scripts/: build-services.sh  check_notifs.sh  check_routes.sh  create_admin_employee.sql  debug_employee.sh  debug_routes.sh  deploy-backend.sh  deploy-production.sh  deploy.sh  e2e_live_test.sh  e2e_test.py  find_routes.sh  fix_metadata_column.sql  rebuild-fixed.sh  routes2.sh  seed-demo-employees.sql  seed-demo.sql  setup-server.sh  test-api-routes.py  test_all_routes.sh  verify_api.sh
(+379 files in other folders)
